Feat: Criação do repository e do service user, alteração nos controllers. Fix: Swagger alterado.
