# docs/swagger.json
@@ -62,12 +62,18 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Editar usuario (Adress)",
+                "summary": "Editar usuario (Password)",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Adress para editar as novas info",
-                        "name": "Adress",
+                        "description": "Password para editar as novas info",
+                        "name": "Password",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Email para editar as novas info",
+                        "name": "Email",
                         "in": "query"
                     }
                 ],
@@ -130,6 +136,12 @@
                         "type": "string",
                         "description": "Name para editar as novas info",
                         "name": "Name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Email para editar as novas info",
+                        "name": "Email",
                         "in": "query"
                     }
                 ],
